# depot

./: .gitignore  Cargo.toml  LICENSE  README.md
proto/: depot.proto
src/: depot_dispatcher.rs  depot_pb2.py  depot_sink.rs  depot_worker.py  depot_worker.rs
src/proto/: depot.rs
